# Ai-Agent-Ant-Colony

./: .env.example  .gitignore  .gitmodules  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
data/examples/: README.md  agent_surveys.jsonl  rag_brain_memories.jsonl  task_flow_complete.json  violations.jsonl
data/examples/human_alerts/: alert_worker12_revoked.json
docs/: ARCHITECTURE.md  DATA_FORMATS.md  QUICKSTART.md  RAG_BRAIN.md
examples/: demo.py
src/orchestrator/: agent.py
src/qa_reporter/: agent.py
src/queen/: agent.py
src/scribe/: agent.py
src/shared/: __init__.py  agent_mail.py  base_agent.py  bridge.py  comm_laws.py  config.py  llm_client.py  rag_client.py  schemas.py  status_survey.py
src/warden/: agent.py
src/worker/: agent.py  manager.py
tools/: survey_cli.py  violations_cli.py
